# colorflip

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.toml
default_config/: settings.toml
example/: .env
scratch/: selenium.py
src/colorflip/: __init__.py  config.py
src/colorflip/cli/: main.py
src/colorflip/rules/: __init__.py  rule_builder.py  rules_class.py
src/colorflip/rules/callable_builders/: __init__.py  backup.py  editor.py  overwrite.py  overwrite_functions.py  preview.py  reversion.py
src/colorflip/switcher/: switcher_class.py
src/colorflip/theme/: theme_handler.py
src/colorflip/utils/: color_format.py  validation.py
src/swytchswatch/utils/: color_format.py  validation.py
test/: color_format_test.py
